--- a/style.css
+++ b/style.css
@@ -31,12 +31,36 @@
 }
 
 .content{
-	background: green;	
+	background: green;
 }
 .footer{
-	background: blue;	
+	background: blue;
 }
 
 .footer a{
 	color: #fff;
 }
+
+/*
+
+.btn {
+  color: #fff;
+  background: #000;
+  padding: 10px 40px;
+  text-decoration: none;
+  transition: background .5s;
+}
+
+html {
+  background-color: #00539F;
+}
+
+body {
+  width: 600px;
+  margin: 0 auto;
+  background-color: #D2691E;
+  padding: 0 20px 20px 20px;
+  border: 5px solid black;
+}
+
+*/
